# vibecoding

./: .gitignore  CONVENTIONS.md  Cargo.toml  IDEAS.md
calendar-free-time/: calendar-free-time.py  pyproject.toml  token.json
daily-laws-of-power/: Makefile  The-48-Laws-of-Power-by-Robert-Greene-Book-Summary.txt  env.yaml  main.py  requirements.txt
daily-laws-of-power/rust/: Cargo.toml
daily-laws-of-power/rust/src/: main.rs
display-to-jupyter/attempt0/: selfwrite.ipynb  write-to-jupyter.py
display-to-jupyter/attempt1/: README.md  display_to_jupyter.py
display-to-jupyter/attempt2/: README.md  notebook-client.py  notebook-server.py  pyproject.toml  test_client.py
display-to-jupyter/attempt3/: README.md  pyproject.toml  server.py
display-to-jupyter/attempt4/: README.md
display-to-jupyter/attempt4/claude/: jupyter-kernel-architecture.mermaid  jupyter-kernel-client.py  jupyter-kernel-gui.py  requirements-usage.txt
display-to-jupyter/attempt4/gemini/: jupyter_connector.py  main.py
pdf-infer-filename/: pdf-infer-filename.py  pyproject.toml
pdf-ocr-extract/: pdf-ocr-extract-by-gemini.py  pdf-ocr-extract-with-huggingface-model.py  pdf-ocr-extract-without-working-orientation.py  pdf-ocr-extract.py
pdf-redactor/: pdf-redactor.py  pyproject.toml
pdf-similarity-filer/: README.md  check_embedding_cache.py  notebook.ipynb  pdf-similarity-filer-feature-preparation.py  pyproject.toml
tax-rates/: README.md  pyproject.toml  tax-rates.csv  tax-rates.py
termdiff/: Cargo.toml
termdiff/old/: main.rs
termdiff/src/: main.rs
